add: classes of ball and paddles

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="game-container">
         <canvas id="gameCanvas"></canvas>
+        <div class="score" id="score"></div>
     </div>
 </body>
 </html>
