add: RETRO mode style to the game

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ping Pong Game</title>
+    <title>Retro Ping Pong</title>
 </head>
 <body>
     <div class="game-container">
+        <div class="title">RETRO PING PONG</div>
         <canvas id="gameCanvas"></canvas>
         <div class="score" id="score"></div>
+        <div class="instructions">USE W/S OR ARROW KEYS TO PLAY</div>
     </div>
 </body>
 </html>
